# huffman_codec

./: CMakeLists.txt  README.md
src/: main.cpp
src/cli/: cmd.cpp
src/gui/: ui_dx12.cpp
src/lib/: CMakeLists.txt  huffman_codec.cpp  huffman_codec.h  huffman_tree.h
tests/: huffman_codec_test.cc  huffman_tree_test.cc
tests/test_files/: 1M4C.txt  250K16C.txt  LibSource.txt
